--- a/dev/src/scss/plugins/_lightgallery.scss
+++ b/dev/src/scss/plugins/_lightgallery.scss
@@ -4,8 +4,8 @@
 * Copyright (c) 2017 Sachin N; Licensed GPLv3 */
 @font-face {
   font-family: 'lg';
-  src: url("../fonts/lightgallery/lg.eot?n1z373");
-  src: url("../fonts/lightgallery/lg.eot?#iefixn1z373") format("embedded-opentype"), url("../fonts/lightgallery/lg.woff?n1z373") format("woff"), url("../fonts/lightgallery/lg.ttf?n1z373") format("truetype"), url("../fonts/lightgallery/lg.svg?n1z373#lg") format("svg");
+  src: url("fonts/lightgallery/lg.eot?n1z373");
+  src: url("fonts/lightgallery/lg.eot?#iefixn1z373") format("embedded-opentype"), url("fonts/lightgallery/lg.woff?n1z373") format("woff"), url("fonts/lightgallery/lg.ttf?n1z373") format("truetype"), url("fonts/lightgallery/lg.svg?n1z373#lg") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -402,13 +402,13 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   cursor: pointer;
 }
 .lg-outer .lg-has-vimeo .lg-video-play {
-  background: url("../img/lightgallery/vimeo-play.png") no-repeat scroll 0 0 transparent;
+  background: url("/img/lightgallery/vimeo-play.png") no-repeat scroll 0 0 transparent;
 }
 .lg-outer .lg-has-vimeo:hover .lg-video-play {
-  background: url("../img/lightgallery/vimeo-play.png") no-repeat scroll 0 -58px transparent;
+  background: url("/img/lightgallery/vimeo-play.png") no-repeat scroll 0 -58px transparent;
 }
 .lg-outer .lg-has-html5 .lg-video-play {
-  background: transparent url("../img/lightgallery/video-play.png") no-repeat scroll 0 0;
+  background: transparent url("/img/lightgallery/video-play.png") no-repeat scroll 0 0;
   height: 64px;
   margin-left: -32px;
   margin-top: -32px;
@@ -419,10 +419,10 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   opacity: 1;
 }
 .lg-outer .lg-has-youtube .lg-video-play {
-  background: url("../img/lightgallery/youtube-play.png") no-repeat scroll 0 0 transparent;
+  background: url("/img/lightgallery/youtube-play.png") no-repeat scroll 0 0 transparent;
 }
 .lg-outer .lg-has-youtube:hover .lg-video-play {
-  background: url("../img/lightgallery/youtube-play.png") no-repeat scroll 0 -60px transparent;
+  background: url("/img/lightgallery/youtube-play.png") no-repeat scroll 0 -60px transparent;
 }
 .lg-outer .lg-video-object {
   width: 100% !important;
@@ -823,7 +823,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   white-space: nowrap;
 }
 .lg-outer .lg-item {
-  background: url("../img/lightgallery/loading.gif") no-repeat scroll center center transparent;
+  background: url("/img/lightgallery/loading.gif") no-repeat scroll center center transparent;
   display: none !important;
 }
 .lg-outer.lg-css3 .lg-prev-slide, .lg-outer.lg-css3 .lg-current, .lg-outer.lg-css3 .lg-next-slide {
